--- a/editing_calendar_statement.ipynb
+++ b/editing_calendar_statement.ipynb
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_2024_5_5.csv'"
+       "'C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_2024_5_12.csv'"
       ]
      },
      "execution_count": 5,
@@ -106,7 +106,7 @@
     "# import the file\n",
     "filename = \"C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_\" + str(year) + '_' + str(month) + '_' +  str(day) + \".csv\"\n",
     "tester_location = \"C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/tester/files/calendar_statement_\" + str(year) + '_' + str(month) + '_' +  str(day) + \".csv\"\n",
-    "trading_location = \"C:/Users/WilliamFetzner/Documents/Trading/news_events\" + str(year) + '_' + str(month) + '_' +  str(day) + \".csv\"\n",
+    "trading_location = \"C:/Users/WilliamFetzner/Documents/Trading/news_events/calendar_statement_\" + str(year) + '_' + str(month) + '_' +  str(day) + \".csv\"\n",
     "df = pd.read_csv(filename)\n",
     "filename"
    ]
@@ -146,156 +146,210 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2024.05.06 10:00:00</td>\n",
-       "      <td>(Spain) Unemployment Change</td>\n",
+       "      <td>2024.05.14 12:00:00</td>\n",
+       "      <td>(Germany) ZEW Economic Sentiment Index</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2024.05.06 10:15:00</td>\n",
-       "      <td>(Spain) HCOB Services PMI</td>\n",
+       "      <td>2024.05.14 15:30:00</td>\n",
+       "      <td>(United States) PPI MoM</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2024.05.06 10:45:00</td>\n",
-       "      <td>(Italy) HCOB Services PMI</td>\n",
+       "      <td>2024.05.14 17:00:00</td>\n",
+       "      <td>(United States) Fed Chair Powell Speech</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2024.05.06 10:50:00</td>\n",
-       "      <td>(France) HCOB Services PMI</td>\n",
+       "      <td>2024.05.15 12:00:00</td>\n",
+       "      <td>(Euro Area) Employment Change QoQ</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2024.05.06 10:55:00</td>\n",
-       "      <td>(Germany) HCOB Services PMI</td>\n",
+       "      <td>2024.05.15 12:00:00</td>\n",
+       "      <td>(Euro Area) Employment Change YoY</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2024.05.06 11:00:00</td>\n",
-       "      <td>(Euro Area) HCOB Services PMI</td>\n",
+       "      <td>2024.05.15 15:30:00</td>\n",
+       "      <td>(United States) NY Empire State Manufacturing ...</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>2024.05.07 09:00:00</td>\n",
-       "      <td>(Germany) Balance of Trade</td>\n",
+       "      <td>2024.05.15 15:30:00</td>\n",
+       "      <td>(United States) Inflation Rate YoY</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>2024.05.07 12:00:00</td>\n",
-       "      <td>(Euro Area) Retail Sales MoM</td>\n",
+       "      <td>2024.05.15 15:30:00</td>\n",
+       "      <td>(United States) Retail Sales YoY</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>2024.05.07 12:00:00</td>\n",
-       "      <td>(Euro Area) Retail Sales YoY</td>\n",
+       "      <td>2024.05.15 15:30:00</td>\n",
+       "      <td>(United States) Core Inflation Rate MoM</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>2024.05.08 11:00:00</td>\n",
-       "      <td>(Italy) Retail Sales YoY</td>\n",
+       "      <td>2024.05.15 15:30:00</td>\n",
+       "      <td>(United States) Retail Sales MoM</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>2024.05.08 11:00:00</td>\n",
-       "      <td>(Italy) Retail Sales MoM</td>\n",
+       "      <td>2024.05.15 15:30:00</td>\n",
+       "      <td>(United States) Retail Sales Ex Autos MoM</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>2024.05.09 15:15:00</td>\n",
-       "      <td>(Euro Area) ECB Guindos Speech</td>\n",
+       "      <td>2024.05.15 15:30:00</td>\n",
+       "      <td>(United States) Inflation Rate MoM</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>2024.05.09 15:30:00</td>\n",
-       "      <td>(United States) Jobless Claims 4-week Average</td>\n",
+       "      <td>2024.05.15 15:30:00</td>\n",
+       "      <td>(United States) Core Inflation Rate YoY</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>2024.05.09 15:30:00</td>\n",
-       "      <td>(United States) Initial Jobless Claims</td>\n",
+       "      <td>2024.05.15 15:30:00</td>\n",
+       "      <td>(United States) CPI</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>2024.05.09 15:30:00</td>\n",
-       "      <td>(United States) Continuing Jobless Claims</td>\n",
+       "      <td>2024.05.15 15:30:00</td>\n",
+       "      <td>(United States) CPI s.a</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>2024.05.10 17:00:00</td>\n",
-       "      <td>(United States) Michigan Consumer Sentiment</td>\n",
+       "      <td>2024.05.15 15:30:00</td>\n",
+       "      <td>(United States) Retail Sales Ex Gas/Autos MoM</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2024.05.16 15:30:00</td>\n",
+       "      <td>(United States) Jobless Claims 4-week Average</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2024.05.16 15:30:00</td>\n",
+       "      <td>(United States) Continuing Jobless Claims</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2024.05.16 15:30:00</td>\n",
+       "      <td>(United States) Initial Jobless Claims</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2024.05.16 15:30:00</td>\n",
+       "      <td>(United States) Building Permits</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2024.05.17 10:20:00</td>\n",
+       "      <td>(Euro Area) ECB Guindos Speech</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2024.05.17 12:00:00</td>\n",
+       "      <td>(Euro Area) CPI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   Date                                          Event Impact  \\\n",
-       "0   2024.05.06 10:00:00                    (Spain) Unemployment Change   High   \n",
-       "1   2024.05.06 10:15:00                      (Spain) HCOB Services PMI   High   \n",
-       "2   2024.05.06 10:45:00                      (Italy) HCOB Services PMI   High   \n",
-       "3   2024.05.06 10:50:00                     (France) HCOB Services PMI   High   \n",
-       "4   2024.05.06 10:55:00                    (Germany) HCOB Services PMI   High   \n",
-       "5   2024.05.06 11:00:00                  (Euro Area) HCOB Services PMI   High   \n",
-       "6   2024.05.07 09:00:00                     (Germany) Balance of Trade   High   \n",
-       "7   2024.05.07 12:00:00                   (Euro Area) Retail Sales MoM   High   \n",
-       "8   2024.05.07 12:00:00                   (Euro Area) Retail Sales YoY   High   \n",
-       "9   2024.05.08 11:00:00                       (Italy) Retail Sales YoY   High   \n",
-       "10  2024.05.08 11:00:00                       (Italy) Retail Sales MoM   High   \n",
-       "11  2024.05.09 15:15:00                 (Euro Area) ECB Guindos Speech   High   \n",
-       "12  2024.05.09 15:30:00  (United States) Jobless Claims 4-week Average   High   \n",
-       "13  2024.05.09 15:30:00         (United States) Initial Jobless Claims   High   \n",
-       "14  2024.05.09 15:30:00      (United States) Continuing Jobless Claims   High   \n",
-       "15  2024.05.10 17:00:00    (United States) Michigan Consumer Sentiment   High   \n",
+       "                   Date                                              Event  \\\n",
+       "0   2024.05.14 12:00:00             (Germany) ZEW Economic Sentiment Index   \n",
+       "1   2024.05.14 15:30:00                            (United States) PPI MoM   \n",
+       "2   2024.05.14 17:00:00            (United States) Fed Chair Powell Speech   \n",
+       "3   2024.05.15 12:00:00                  (Euro Area) Employment Change QoQ   \n",
+       "4   2024.05.15 12:00:00                  (Euro Area) Employment Change YoY   \n",
+       "5   2024.05.15 15:30:00  (United States) NY Empire State Manufacturing ...   \n",
+       "6   2024.05.15 15:30:00                 (United States) Inflation Rate YoY   \n",
+       "7   2024.05.15 15:30:00                   (United States) Retail Sales YoY   \n",
+       "8   2024.05.15 15:30:00            (United States) Core Inflation Rate MoM   \n",
+       "9   2024.05.15 15:30:00                   (United States) Retail Sales MoM   \n",
+       "10  2024.05.15 15:30:00          (United States) Retail Sales Ex Autos MoM   \n",
+       "11  2024.05.15 15:30:00                 (United States) Inflation Rate MoM   \n",
+       "12  2024.05.15 15:30:00            (United States) Core Inflation Rate YoY   \n",
+       "13  2024.05.15 15:30:00                                (United States) CPI   \n",
+       "14  2024.05.15 15:30:00                            (United States) CPI s.a   \n",
+       "15  2024.05.15 15:30:00      (United States) Retail Sales Ex Gas/Autos MoM   \n",
+       "16  2024.05.16 15:30:00      (United States) Jobless Claims 4-week Average   \n",
+       "17  2024.05.16 15:30:00          (United States) Continuing Jobless Claims   \n",
+       "18  2024.05.16 15:30:00             (United States) Initial Jobless Claims   \n",
+       "19  2024.05.16 15:30:00                   (United States) Building Permits   \n",
+       "20  2024.05.17 10:20:00                     (Euro Area) ECB Guindos Speech   \n",
+       "21  2024.05.17 12:00:00                                    (Euro Area) CPI   \n",
        "\n",
-       "   Currency  \n",
-       "0       EUR  \n",
-       "1       EUR  \n",
-       "2       EUR  \n",
-       "3       EUR  \n",
-       "4       EUR  \n",
-       "5       EUR  \n",
-       "6       EUR  \n",
-       "7       EUR  \n",
-       "8       EUR  \n",
-       "9       EUR  \n",
-       "10      EUR  \n",
-       "11      EUR  \n",
-       "12      USD  \n",
-       "13      USD  \n",
-       "14      USD  \n",
-       "15      USD  "
+       "   Impact Currency  \n",
+       "0    High      EUR  \n",
+       "1    High      USD  \n",
+       "2    High      USD  \n",
+       "3    High      EUR  \n",
+       "4    High      EUR  \n",
+       "5    High      USD  \n",
+       "6    High      USD  \n",
+       "7    High      USD  \n",
+       "8    High      USD  \n",
+       "9    High      USD  \n",
+       "10   High      USD  \n",
+       "11   High      USD  \n",
+       "12   High      USD  \n",
+       "13   High      USD  \n",
+       "14   High      USD  \n",
+       "15   High      USD  \n",
+       "16   High      USD  \n",
+       "17   High      USD  \n",
+       "18   High      USD  \n",
+       "19   High      USD  \n",
+       "20   High      EUR  \n",
+       "21   High      EUR  "
       ]
      },
      "execution_count": 6,
